--- a/styles/_main-product-page.scss
+++ b/styles/_main-product-page.scss
@@ -153,7 +153,7 @@
             display: flex;
             align-items: center;
 
-            @include breakpoint-down(small) {
+            @include breakpoint-down(medium) {
                 flex-direction: column;
                 align-items:flex-start;
             }
